Adjusted the config file to successfuly run the first example.

--- a/inputs/configs/local_librispeech.conf
+++ b/inputs/configs/local_librispeech.conf
@@ -1,7 +1,7 @@
 [General]
 input_ds_name=librispeech
 input_dir_path=
-output_dir_path=
-input_lexicon_path=inputs/lexicons/librispeech-lexicon.txt
-language=english
+output_dir_path=outputs\LibriSpeech\dev-clean
+input_lexicon_path=inputs\lexicons\librispeech-lexicon2.txt
+language=english_mfa
 clear_cache=False
