--- a/inputs/configs/local_librispeech.conf
+++ b/inputs/configs/local_librispeech.conf
@@ -2,6 +2,6 @@
 input_ds_name=librispeech
 input_dir_path=
 output_dir_path=outputs\LibriSpeech\dev-clean
-input_lexicon_path=inputs\lexicons\librispeech-lexicon2.txt
-language=english_mfa
+input_lexicon_path=english_us_arpa
+language=english_us_arpa
 clear_cache=False
